centered image and text

--- a/bio.html
+++ b/bio.html
@@ -2,18 +2,33 @@
 <html>
 <head>
     <title>JP Bio</title>
-   
+ <style>
+ img {
+     display: block;
+     margin-left: auto;
+     margin-right: auto;
+ }
+ 
+ </style>  
   
 
 </head>
 <body>
 
     <h1 align="center">Student Bio</h1>
+    <img src="https://media-exp1.licdn.com/dms/image/C4D03AQHFVbh-nYtNMw/profile-displayphoto-shrink_200_200/0?e=1585785600&v=beta&t=dZsIuxchfmuTxZrjItiXqnEdoSkPxbJYTnoszQh2cC8">
 
 
-    <h2>Javay Porter</h2>
+    <h2 align="center">Javay Porter</h2>
 
-    <p>I AM THE BEST</p>
+    <p align="center">My name is Javay Porter. I was born in Washington, D.C. My favorite subject is Algebra. I love coding.</p>
+
+</br>
+<h2>Contact Info</h2>
+<ul>
+    <li>Email: <link javayporter@gmail.com></li>
+    <li>Phone: 202-590-9878</li>
+</ul>
 
 </body>
 </html>
